--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .card {
-  background-color: #145369;
+  background-color: #014b6d;
   height: 50vh;
   width: 20vw;
   border-radius: 10px 0px 10px 0px;
@@ -53,21 +53,58 @@ p {
 }
 
 .enlace-tarjeta :hover {
-  box-shadow: 7px 7px 6px rgba(37, 150, 190, 1);
+  box-shadow: 7px 7px 6px rgb(210, 242, 255);
 }
 
 .card::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 2%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0);
-    transition: box-shadow 0.3s ease;
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 2%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s ease;
+}
 
-  .card:hover::after {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
+.card:hover::after {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.card:hover {
+  transform: scale(1.05);
+  /* transform: translateY(-5px); */
+}
+
+.card {
+  transition: transform 0.3s ease-in-out;
+  position: relative;
+}
+
+.card:hover .logo {
+  opacity: 1;
+  transition: opacity 0.3s ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 20vh;
+  transition: width 0.3s, height 0.3s ;
+}
+
+.contenido {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  /* transition: width 0.3s, height 0.3s; */
+}
+
+.card:hover .contenido {
+  opacity: 0;
+  filter: blur(5px);
+}
+
+h1{
+    text-align: center;
+    font-size: 100px;
+}
