--- a/style.css
+++ b/style.css
@@ -108,3 +108,24 @@ h1{
     text-align: center;
     font-size: 100px;
 }
+
+.caja-link {
+  background-color: #014b6d;
+  height: 5vh;
+  width: 10vw;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.caja-link a{
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.caja-link :hover {
+  opacity: 1;
+  transform: scale(1.05);
+}
