--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   height: 20vh;
-  transition: width 0.3s, height 0.3s ;
+  transition: width 0.3s, height 0.3s;
 }
 
 .contenido {
@@ -104,23 +104,24 @@ p {
   filter: blur(5px);
 }
 
-h1{
-    text-align: center;
-    font-size: 100px;
+h1 {
+  text-align: center;
+  font-size: 100px;
 }
 
 .caja-link {
   background-color: #014b6d;
   height: 5vh;
-  width: 10vw;
+  width: 8vw;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: transform 0.3s ease-in-out;
+  margin-top: 20px;
 }
 
-.caja-link a{
+.caja-link a {
   text-decoration: none;
   color: aliceblue;
 }
@@ -128,4 +129,11 @@ h1{
 .caja-link :hover {
   opacity: 1;
   transform: scale(1.05);
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
